<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#f8f8f8"
    android:gravity="center">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/barbershop_logo"
        android:layout_marginTop="32dp"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#333333"
        android:text="@string/welcome_to_the_barbershop"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHighlight="#CEBEBE"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="#7C7777" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="text|textPassword"
        android:textColorHighlight="#CEBEBE"
        android:textColorHint="#7C7777" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/btnToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="@string/sign_up" />

</LinearLayout>